--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
          location permissions for the 'MyLocation' functionality.
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -28,13 +28,15 @@
              You can define the keys for the debug and release targets in src/debug/ and src/release/.
         -->
         <meta-data
-            android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyDwttufkByVoZwPBopwyUVmKutvcEmil2Y" />
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
 
         <activity
+            android:name=".Maps"
+            android:label="@string/title_activity_maps"></activity>
+        <activity
             android:name=".Map"
-            android:label="Map">
-        </activity>
+            android:label="Map"></activity>
 
         <meta-data
             android:name="com.google.android.gms.version"
@@ -50,8 +52,9 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".LocationService" android:stopWithTask="true" />
-
+        <service
+            android:name=".LocationService"
+            android:stopWithTask="true" />
     </application>
 
 </manifest>
