--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         <activity
             android:name=".Maps"
             android:label="@string/title_activity_maps"
-            android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            android:windowSoftInputMode="adjustResize"></activity>
 
         <meta-data
             android:name="com.google.android.gms.version"
@@ -33,7 +34,7 @@
 
         <activity
             android:name=".Home"
-            android:label="Home">
+            android:label="Park Aid">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
