--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,10 +23,11 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:support-media-compat:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
-    implementation "com.google.android.gms:play-services-places:16.0.0"
+    implementation 'com.google.android.libraries.places:places-compat:1.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
-    implementation 'com.google.android.gms:play-services-location:16.0.0'
+    //implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.google.android.gms:play-services-places:16.0.0'
     implementation 'com.google.maps.android:android-maps-utils:0.5+'
     implementation 'com.android.support:design:28.0.0-rc02'
     implementation 'com.google.maps:google-maps-services:0.9.1'
